--- a/index.html
+++ b/index.html
@@ -5,16 +5,68 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <title>Notatki</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/f5968f5edd.js" crossorigin="anonymous"></script>
     <script defer src="script.js"></script>
-    <title>Notatki</title>
 </head>
 
 <body>
+    <div class="menu">
+        <h1 class="menuHeader"><i class="fas fa-sticky-note"></i>
+            Moje Notatki
+        </h1>
 
+        <div class="menuButtons">
+            <button class="add icon">
+                <i class="fas fa-plus"></i>
+                Dodaj
+            </button>
+            <button class="deleteAll icon">
+                <i class="fas fa-trash-alt"></i>
+                Usuń wszystkie
+            </button>
+        </div>
+    </div>
+
+    <div class="noteArea">
+        <div class="note">
+            <div class="noteHeader">
+                <h2 class="noteTitle">Notatka #1</h2>
+                <button class="deleteNote">
+                    <i class="fas fa-times icon"></i>
+                    Usuń
+                </button>
+            </div>
+            <div class="noteBody"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam quaerat voluptate
+                quasi, nihil vero ullam similique ab facere minima veniam libero mollitia debitis porro, ipsa itaque
+                quis aut, nobis tenetur?
+            </div>
+        </div>
+    </div>
+
+    <div class="notePanel">
+        <h3 class="notePanel__header">Dodaj notatkę</h3>
+        <label for="category">Wybierz kategorię</label>
+        <select name="" id="category">
+            <option value="0" disabled selected>- Wybierz kategorię -</option>
+            <option value="1">Zakupy</option>
+            <option value="1">Praca</option>
+            <option value="1">Relaks</option>
+            <option value="1">Inne</option>
+        </select>
+        <label for="text">Wpisz treść notatki</label>
+        <textarea id="text"></textarea>
+
+        <p class="error">Uzupełnij wszystkie pola!</p>
+        <div class="panelButton">
+            <button class="save icon">Zapisz <i class="fas fa-save"></i></button>
+            <button class="cancel icon">Anuluj <i class="far fa-window-close"></i></button>
+        </div>
+    </div>
 </body>
 
 </html>
